# MyScripts

./: .gitignore  README.md  archsetup.sh  epitech_install.sh  init_project.sh  install.sh
scripts/: HyDeWallpaper.sh  LoadHydeTabs.sh  gitbranchclean.sh  pushnorme.sh
setup_scripts/: setup_aliases.sh  setup_arch.sh  setup_colors.sh  setup_epitech_repo.sh  setup_epitech_scripts.sh  setup_github.sh  setup_grub_dual_boots.sh  steam_games_install.sh
templates/CPP/: Makefile
usefull_scripts/: HyDeWallpaper.sh  init_project.sh  pushnorme.sh
usefull_scripts/templates/C/: Makefile
usefull_scripts/templates/C/.github/workflows/: Build.yml  Merge.yml
usefull_scripts/templates/C/src/: main.c
usefull_scripts/templates/CPP/.github/workflows/: Deploy.yml
usefull_scripts/templates/CPP/src/: main.cpp
usefull_scripts/templates/Hs/: .gitignore  Makefile  package.yaml  project-test.cabal
usefull_scripts/templates/Hs/.github/workflows/: Build.yml
usefull_scripts/templates/Hs/app/: Main.hs
usefull_scripts/templates/Hs/src/: Lib.hs
usefull_scripts/templates/Hs/test/: Spec.hs
usefull_scripts/templates/repository/C/: .gitignore  Makefile
usefull_scripts/templates/repository/CPP/: .gitignore  CMakeLists.txt  Makefile
usefull_scripts/templates/repository/Hs/: Makefile
usefull_scripts/templates/workflows/C-CPP/.github/workflows/: Build.yml  Deploy.yml
utils/: add_alias.sh  install_if_needed.sh
